dbactivationpostgresql/src/main/java/io/rtdi/appcontainer/plugins/databasepostgresql/activation/antlr/SqlscriptsParser.java
// Generated from java-escape by ANTLR 4.11.1
package io.rtdi.appcontainer.plugins.databasepostgresql.activation.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SqlscriptsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, LINE_COMMENT_START=3, BLOCK_COMMENT_START=4, BLOCK_COMMENT_END=5, 
		WS=6, NL=7, VARIABLE=8, ALIAS=9, OBJECT=10, COLUMN=11, DECLARE=12, BEGIN=13, 
		END=14, IF=15, FOR=16, WHILE=17, LOOP=18, SEMI=19, NOT=20, EXISTS=21, 
		SQ=22, DQ=23, BQ=24, DOT=25, COMMA=26, WORD=27, ESC=28;
	public static final int
		RULE_blockcomment = 0, RULE_alias = 1, RULE_variable = 2, RULE_squoted = 3, 
		RULE_dquoted = 4, RULE_bquoted = 5, RULE_identifier = 6, RULE_directive = 7, 
		RULE_directivecondition = 8, RULE_directiveend = 9, RULE_linecomment = 10, 
		RULE_beginblock = 11, RULE_declarestart = 12, RULE_beginstart = 13, RULE_beginend = 14, 
		RULE_ifblock = 15, RULE_ifstart = 16, RULE_ifend = 17, RULE_forblock = 18, 
		RULE_forstart = 19, RULE_forend = 20, RULE_whileblock = 21, RULE_whilestart = 22, 
		RULE_whileend = 23, RULE_loopblock = 24, RULE_loopstart = 25, RULE_loopend = 26, 
		RULE_extra = 27, RULE_semi = 28, RULE_text = 29, RULE_escapedchar = 30, 
		RULE_command = 31, RULE_commandblock = 32, RULE_statement = 33, RULE_paramclause = 34, 
		RULE_paramclausestart = 35, RULE_paramclauseend = 36, RULE_param_list = 37, 
		RULE_script = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"blockcomment", "alias", "variable", "squoted", "dquoted", "bquoted", 
			"identifier", "directive", "directivecondition", "directiveend", "linecomment", 
			"beginblock", "declarestart", "beginstart", "beginend", "ifblock", "ifstart", 
			"ifend", "forblock", "forstart", "forend", "whileblock", "whilestart", 
			"whileend", "loopblock", "loopstart", "loopend", "extra", "semi", "text", 
			"escapedchar", "command", "commandblock", "statement", "paramclause", 
			"paramclausestart", "paramclauseend", "param_list", "script"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'//'", "'/*'", "'*/'", null, null, null, null, "'OBJECT'", 
			"'COLUMN'", "'DECLARE'", "'BEGIN'", "'END'", "'IF'", "'FOR'", "'WHILE'", 
			"'LOOP'", "';'", "'NOT'", "'EXISTS'", "'''", "'\"'", "'`'", "'.'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "LINE_COMMENT_START", "BLOCK_COMMENT_START", "BLOCK_COMMENT_END", 
			"WS", "NL", "VARIABLE", "ALIAS", "OBJECT", "COLUMN", "DECLARE", "BEGIN", 
			"END", "IF", "FOR", "WHILE", "LOOP", "SEMI", "NOT", "EXISTS", "SQ", "DQ", 
			"BQ", "DOT", "COMMA", "WORD", "ESC"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SqlscriptsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockcommentContext extends ParserRuleContext {
		public TerminalNode BLOCK_COMMENT_START() { return getToken(SqlscriptsParser.BLOCK_COMMENT_START, 0); }
		public List<TerminalNode> WS() { return getTokens(SqlscriptsParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(SqlscriptsParser.WS, i);
		}
		public List<TerminalNode> BLOCK_COMMENT_END() { return getTokens(SqlscriptsParser.BLOCK_COMMENT_END); }
		public TerminalNode BLOCK_COMMENT_END(int i) {
			return getToken(SqlscriptsParser.BLOCK_COMMENT_END, i);
		}
		public BlockcommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockcomment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlscriptsListener ) ((SqlscriptsListener)listener).enterBlockcomment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlscriptsListener ) ((SqlscriptsListener)listener).exitBlockcomment(this);
		}
	}

	public final BlockcommentContext blockcomment() throws RecognitionException {
		BlockcommentContext _localctx = new BlockcommentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_blockcomment);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(BLOCK_COMMENT_START);
			setState(79);
			match(WS);
			setState(83);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(80);
					_la = _input.LA(1);
					if ( _la <= 0 || (_la==BLOCK_COMMENT_END) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					} 
				}
				setState(85);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(86);
			match(WS);
			setState(87);
			match(BLOCK_COMMENT_END);
			setState(89);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(88);
				match(WS);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AliasContext extends ParserRuleContext {
		public TerminalNode ALIAS() { return getToken(SqlscriptsParser.ALIAS, 0); }
		public AliasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alias; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlscriptsListener ) ((SqlscriptsListener)listener).enterAlias(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlscriptsListener ) ((SqlscriptsListener)listener).exitAlias(this);
		}
	}

	public final AliasContext alias() throws RecognitionException {
		AliasContext _localctx = new AliasContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_alias);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(ALIAS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableContext extends ParserRuleContext {
		public TerminalNode VARIABLE() { return getToken(SqlscriptsParser.VARIABLE, 0); }
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlscriptsListener ) ((SqlscriptsListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlscriptsListener ) ((SqlscriptsListener)listener).exitVariable(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(VARIABLE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SquotedContext extends ParserRuleContext {
		public List<TerminalNode> SQ() { return getTokens(SqlscriptsParser.SQ); }
		public TerminalNode SQ(int i) {
			return getToken(SqlscriptsParser.SQ, i);
		}
		public List<AliasContext> alias() {
			return getRuleContexts(AliasContext.class);
		}
		public AliasContext alias(int i) {
			return getRuleContext(AliasContext.class,i);
		}
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public List<TerminalNode> ESC() { return getTokens(SqlscriptsParser.ESC); }
		public TerminalNode ESC(int i) {
			return getToken(SqlscriptsParser.ESC, i);
		}
		public SquotedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_squoted; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlscriptsListener ) ((SqlscriptsListener)listener).enterSquoted(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlscriptsListener ) ((SqlscriptsListener)listener).exitSquoted(this);
		}
	}

	public final SquotedContext squoted() throws RecognitionException {
		SquotedContext _localctx = new SquotedContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_squoted);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(SQ);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 532676606L) != 0) {
				{
				setState(100);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(96);
					alias();
					}
					break;
				case 2:
					{
					setState(97);
					variable();
					}
					break;
				case 3:
					{
					setState(98);
					match(ESC);
					}
					break;
				case 4:
					{
					setState(99);
					_la = _input.LA(1);
					if ( _la <= 0 || (_la==SQ) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					break;
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105);
			match(SQ);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DquotedContext extends ParserRuleContext {
		public List<TerminalNode> DQ() { return getTokens(SqlscriptsParser.DQ); }
		public TerminalNode DQ(int i) {
			return getToken(SqlscriptsParser.DQ, i);
		}
		public List<AliasContext> alias() {
			return getRuleContexts(AliasContext.class);
		}
		public AliasContext alias(int i) {
			return getRuleContext(AliasContext.class,i);
		}
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public List<TerminalNode> ESC() { return getTokens(SqlscriptsParser.ESC); }
		public TerminalNode ESC(int i) {
			return getToken(SqlscriptsParser.ESC, i);
		}
		public DquotedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dquoted; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlscriptsListener ) ((SqlscriptsListener)listener).enterDquoted(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlscriptsListener ) ((SqlscriptsListener)listener).exitDquoted(this);
		}
	}

	public final DquotedContext dquoted() throws RecognitionException {
		DquotedContext _localctx = new DquotedContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_dquoted);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(DQ);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 528482302L) != 0) {
				{
				setState(112);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(108);
					alias();
					}
					break;
				case 2:
					{
					setState(109);
					variable();
					}
					break;
				case 3:
					{
					setState(110);
					match(ESC);
					}
					break;
				case 4:
					{
					setState(111);
					_la = _input.LA(1);
					if ( _la <= 0 || (_la==DQ) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					break;
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(117);
			match(DQ);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BquotedContext extends ParserRuleContext {
		public List<TerminalNode> BQ() { return getTokens(SqlscriptsParser.BQ); }
		public TerminalNode BQ(int i) {
			return getToken(SqlscriptsParser.BQ, i);
		}
		public List<AliasContext> alias() {
			return getRuleContexts(AliasContext.class);
		}
		public AliasContext alias(int i) {
			return getRuleContext(AliasContext.class,i);
		}
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public BquotedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bquoted; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlscriptsListener ) ((SqlscriptsListener)listener).enterBquoted(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlscriptsListener ) ((SqlscriptsListener)listener).exitBquoted(this);
		}
	}

	public final BquotedContext bquoted() throws RecognitionException {
		BquotedContext _localctx = new BquotedContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_bquoted);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(BQ);
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 520093694L) != 0) {
				{
				setState(123);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(120);
					alias();
					}
					break;
				case 2:
					{
					setState(121);
					variable();
					}
					break;
				case 3:
					{
					setState(122);
					_la = _input.LA(1);
					if ( _la <= 0 || (_la==BQ) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					break;
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(128);
			match(BQ);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentifierContext extends ParserRuleContext {
		public List<TerminalNode> WORD() { return getTokens(SqlscriptsParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(SqlscriptsParser.WORD, i);
		}
		public List<AliasContext> alias() {
			return getRuleContexts(AliasContext.class);
		}
		public AliasContext alias(int i) {
			return getRuleContext(AliasContext.class,i);
		}
		public List<TerminalNode> DOT() { return getTokens(SqlscriptsParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(SqlscriptsParser.DOT, i);
		}
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlscriptsListener ) ((SqlscriptsListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlscriptsListener ) ((SqlscriptsListener)listener).exitIdentifier(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_identifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WORD:
				{
				setState(130);
				match(WORD);
				}
				break;
			case ALIAS:
				{
				setState(131);
				alias();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(134);
				match(DOT);
				setState(137);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case WORD:
					{
					setState(135);
					match(WORD);
					}
					break;
				case ALIAS:
					{
					setState(136);
					alias();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DirectiveContext extends ParserRuleContext {
		public DirectiveconditionContext directivecondition() {
			return getRuleContext(DirectiveconditionContext.class,0);
		}
		public DirectiveendContext directiveend() {
			return getRuleContext(DirectiveendContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(SqlscriptsParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(SqlscriptsParser.WS, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public DirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlscriptsListener ) ((SqlscriptsListener)listener).enterDirective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlscriptsListener ) ((SqlscriptsListener)listener).exitDirective(this);
		}
	}

	public final DirectiveContext directive() throws RecognitionException {
		DirectiveContext _localctx = new DirectiveContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_directive);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(144);
				match(WS);
				}
				}
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(150);
			directivecondition();
			setState(154);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(151);
					statement();
					}
					} 
				}
				setState(156);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			setState(157);
			directiveend();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DirectiveconditionContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(SqlscriptsParser.IF, 0); }
		public TerminalNode EXISTS() { return getToken(SqlscriptsParser.EXISTS, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode NL() { return getToken(SqlscriptsParser.NL, 0); }
		public TerminalNode OBJECT() { return getToken(SqlscriptsParser.OBJECT, 0); }
		public TerminalNode COLUMN() { return getToken(SqlscriptsParser.COLUMN, 0); }
		public List<TerminalNode> WS() { return getTokens(SqlscriptsParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(SqlscriptsParser.WS, i);
		}
		public TerminalNode NOT() { return getToken(SqlscriptsParser.NOT, 0); }
		public DirectiveconditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directivecondition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlscriptsListener ) ((SqlscriptsListener)listener).enterDirectivecondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlscriptsListener ) ((SqlscriptsListener)listener).exitDirectivecondition(this);
		}
	}

	public final DirectiveconditionContext directivecondition() throws RecognitionException {
		DirectiveconditionContext _localctx = new DirectiveconditionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_directivecondition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(IF);
			setState(161); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(160);
				match(WS);
				}
				}
				setState(163); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WS );
			setState(165);
			_la = _input.LA(1);
			if ( !(_la==OBJECT || _la==COLUMN) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(167); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(166);
				match(WS);
				}
				}
				setState(169); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WS );
			setState(177);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NOT) {
				{
				setState(171);
				match(NOT);
				setState(173); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(172);
					match(WS);
					}
					}
					setState(175); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==WS );
				}
			}

			setState(179);
			match(EXISTS);
			setState(181); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(180);
				match(WS);
				}
				}
				setState(183); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WS );
			setState(185);
			identifier();
			setState(189);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(186);
				match(WS);
				}
				}
				setState(191);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(192);
			match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DirectiveendContext extends ParserRuleContext {
		public TerminalNode LINE_COMMENT_START() { return getToken(SqlscriptsParser.LINE_COMMENT_START, 0); }
		public TerminalNode END() { return getToken(SqlscriptsParser.END, 0); }
		public TerminalNode IF() { return getToken(SqlscriptsParser.IF, 0); }
		public List<TerminalNode> WS() { return getTokens(SqlscriptsParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(SqlscriptsParser.WS, i);
		}
		public DirectiveendContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directiveend; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlscriptsListener ) ((SqlscriptsListener)listener).enterDirectiveend(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlscriptsListener ) ((SqlscriptsListener)listener).exitDirectiveend(this);
		}
	}

	public final DirectiveendContext directiveend() throws RecognitionException {
		DirectiveendContext _localctx = new DirectiveendContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_directiveend);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(194);
			match(LINE_COMMENT_START);
			setState(198);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(195);
				match(WS);
				}
				}
				setState(200);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(201);
			match(END);
			setState(203); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(202);
				match(WS);
				}
				}
				setState(205); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WS );
			setState(207);
			match(IF);
			setState(211);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,21,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(208);
					match(WS);
					}
					} 
				}
				setState(213);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,21,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
